--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		Site do Vitor
 		</title>
 		<style>
+
 			h1{
 				text-align: center;
 				background: darkolivegreen;
@@ -20,7 +21,6 @@
 		</style>
 	</head>
 	<body>
-	<div>
 		<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQERy6w2XNJoAPLVxKzpWqvl2h6ppexLS5RiA&usqp=CAU" width="35%">
 		<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ5wMCp0N78xOxDXhHQQ-5Wuh1MMXo1ZiaZZA&usqp=CAU" width="40%">
 		<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTcoPNfj50w_fxSay3Zj8smTehHRFkoDmoqnw&usqp=CAUs"width="20%" >
@@ -41,7 +41,10 @@
 		<p>Ruim</p>
 			<li>Doce</li>
 		</ul>
-	</div>
-	</body>
+	<a href="https://www.youtube.com/c/Juliette/videos"> Clique aqui</a>
+	<br>
+	<br>
 
+	
+	</body>
 </html>
