--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<a href="https://www.youtube.com/c/Juliette/videos"> Clique aqui</a>
 	<br>
 	<br>
+	<iframe width="853" height="480" src="https://www.youtube.com/embed/JCtmCjW6vUE" title="JULIETTE NO BBB21! OS MELHORES MOMENTOS DA CAMPEÃ 🌵 | BIG BROTHER BRASIL 21" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-	
 	</body>
 </html>
