--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<p>Ruim</p>
 			<li>Doce</li>
 		</ul>
-	<a href="https://www.youtube.com/c/Juliette/videos"> Clique aqui</a>
+	<a href="https://www.youtube.com/c/Juliette/videos"> Clique aqui para ir no canal da Juliette</a>
 	<br>
 	<br>
 	<iframe width="853" height="480" src="https://www.youtube.com/embed/JCtmCjW6vUE" title="JULIETTE NO BBB21! OS MELHORES MOMENTOS DA CAMPEÃ 🌵 | BIG BROTHER BRASIL 21" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
