--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<a href="https://www.youtube.com/c/Juliette/videos"> Clique aqui para ir no canal da Juliette</a>
 	<br>
 	<br>
-	<iframe width="853" height="480" src="https://www.youtube.com/embed/JCtmCjW6vUE" title="JULIETTE NO BBB21! OS MELHORES MOMENTOS DA CAMPEÃ 🌵 | BIG BROTHER BRASIL 21" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+	<iframe width="850" height="400" src="https://www.youtube.com/embed/JCtmCjW6vUE" title="JULIETTE NO BBB21! OS MELHORES MOMENTOS DA CAMPEÃ 🌵 | BIG BROTHER BRASIL 21" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen> Melhores momentos da Juliette</iframe>
+    <iframe width="850" height="400" src="<iframe width="1309" height="480" src="https://www.youtube.com/embed/AOd-KbDMxK8" title="Live - Juliette, YouTube Music e Rede Brasil do Pacto Global da ONU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen> Show da Juliette</iframe>"
 	</body>
 </html>
