--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			}
 			p{
 				text-align: center;
-				background: darkseagreen;
+				background: rgb(162, 214, 162);
 				color: black;
 			}
 		</style>
@@ -28,8 +28,8 @@
 		<h1>Ranking do EP da Juliette</h1>
 		<p>Cacto maior de todos</p>
 		<h2>Ranking do EP da Juliette</h2>
-		<P>Melhores</P>
 		<ul>
+		<P>Melhores</P>
 			<li>Diferença Mara</li>
 			<li>Bença</li>
 			<li>Vixe que gostoso</li>
@@ -45,6 +45,5 @@
 	<br>
 	<br>
 	<iframe width="850" height="400" src="https://www.youtube.com/embed/JCtmCjW6vUE" title="JULIETTE NO BBB21! OS MELHORES MOMENTOS DA CAMPEÃ 🌵 | BIG BROTHER BRASIL 21" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen> Melhores momentos da Juliette</iframe>
-    <iframe width="850" height="400" src="<iframe width="1309" height="480" src="https://www.youtube.com/embed/AOd-KbDMxK8" title="Live - Juliette, YouTube Music e Rede Brasil do Pacto Global da ONU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen> Show da Juliette</iframe>"
 	</body>
 </html>
