--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 		<h1>Ranking do EP da Juliette</h1>
 		<p>Cacto maior de todos</p>
 		<h2>Ranking do EP da Juliette</h2>
+		<space>
 		<P>Melhores</P>
 			<li>Diferença Mara</li>
 			<li>Bença</li>
@@ -39,6 +40,7 @@
 
 		<p>Ruim</p>
 			<li>Doce</li>
+		</space>	
 	<a href="https://www.youtube.com/c/Juliette/videos"> Clique aqui para ir no canal da Juliette</a>
 	<br>
 	<br>
