--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
 	<a href="https://www.youtube.com/c/Juliette/videos"> Clique aqui para ir no canal da Juliette</a>
 	<br>
 	<br>
-	<iframe width="850" height="400" src="https://www.youtube.com/embed/JCtmCjW6vUE" title="JULIETTE NO BBB21! OS MELHORES MOMENTOS DA CAMPEÃ 🌵 | BIG BROTHER BRASIL 21" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen> Melhores momentos da Juliette</iframe>
+	<iframe width="1308" height="480" src="https://www.youtube.com/embed/JCtmCjW6vUE" title="JULIETTE NO BBB21! OS MELHORES MOMENTOS DA CAMPEÃ 🌵 | BIG BROTHER BRASIL 21" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</body>
 </html>
