--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 		<space>
 		</space>
 			<li>Doce</li>
-	<space></space>		
+	<space>		
 	<a href="https://www.youtube.com/c/Juliette/videos"> Clique aqui para ir no canal da Juliette</a>
-	<space></space>
+	</space>
 	<br>
 	<br>
 	<iframe width="1308" height="480" src="https://www.youtube.com/embed/JCtmCjW6vUE" title="JULIETTE NO BBB21! OS MELHORES MOMENTOS DA CAMPEÃ 🌵 | BIG BROTHER BRASIL 21" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
