--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<li>Doce</li>
 	<br>
 	</br>				
-	    <a href="https://www.youtube.com/c/Juliette/videos"> Clique aqui para ir no canal da Juliette e avcaliar você mesmo o EP dela.</a>
+	    <a href="https://www.youtube.com/c/Juliette/videos"> Clique aqui para ir no canal da Juliette e avaliar você mesmo o EP dela.</a>
 	<br>
 	<br>
 	<iframe width="1308" height="480" src="https://www.youtube.com/embed/JCtmCjW6vUE" title="JULIETTE NO BBB21! OS MELHORES MOMENTOS DA CAMPEÃ 🌵 | BIG BROTHER BRASIL 21" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
