--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 	<br>
 	<br>
 	<br>
-	<iframe width="1308" height="480" src="https://www.youtube.com/embed/JCtmCjW6vUE" title="JULIETTE NO BBB21! OS MELHORES MOMENTOS DA CAMPEÃ 🌵 | BIG BROTHER BRASIL 21" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	</body>
+	<p>No dia 11/09/22 a Juliette contou na arena ítau no Rock In Rio</p>
+	<iframe width="853" height="480" src="https://www.youtube.com/embed/qUaPl23EN5o" title="JULIETTE - SHOW COMPLETO (ROCK IN RIO 2022 // ARENA ITAÚ)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p>Isso comprovou seu talebnto musical porque ela foi a artista com menos tempo de carreira a subir no palco do rock In Rio</p> 
+    </body>
 </html>
