--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>
-		Site do Vitor
+		Fan Page Juliette
 		</title>
 		<style>
 
@@ -37,19 +37,19 @@
 		<p>Médias</p>
 		<space>
 		</space>
-			<li>Sei lá</li>
-			<li>Benzin</li>
+			<li><a href="https://youtu.be/C_WsDmUUdyQ">Sei lá</a></li>
+			<li><a href="https://youtu.be/C_WsDmUUdyQ">Benzin</a></li>
 
 		<p>Ruim</p>
 		<space>
 		</space>
-			<li>Doce</li>
+			<li><a href="https://youtu.be/Rqp9zpoRe6Q">Doce</a></li>
 	<br>
 	<br>				
 	    <a href="https://www.youtube.com/c/Juliette/videos"> Clique aqui para ir no canal da Juliette e avaliar você mesmo o EP dela.</a>
 	<br>
 	<br>
-	<p>No dia 11/09/22 a Juliette contou na arena ítau no Rock In Rio</p>
+	<p>No dia 11/09/22 a Juliette cantou na arena ítau no Rock In Rio</p>
 	<iframe width="853" height="480" src="https://www.youtube.com/embed/qUaPl23EN5o" title="JULIETTE - SHOW COMPLETO (ROCK IN RIO 2022 // ARENA ITAÚ)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p>Isso comprovou seu talento musical porque ela foi a artista com menos tempo de carreira a subir no palco do rock In Rio</p> 
     </body>
