--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 
 		<h1>Ranking do EP da Juliette</h1>
 		<p>Cacto maior de todos</p>
-		<h2>Ranking do EP da Juliette</h2>
 		<P>Melhores</P>
 		<space>
 		</space>
@@ -49,8 +48,8 @@
 	    <a href="https://www.youtube.com/c/Juliette/videos"> Clique aqui para ir no canal da Juliette e avaliar você mesmo o EP dela.</a>
 	<br>
 	<br>
-	<p>No dia 11/09/22 a Juliette cantou na arena ítau no Rock In Rio</p>
+	<h3>Dia 11/09/22 a Juliette cantou na arena ítau no Rock In Rio</h3>
 	<iframe width="853" height="480" src="https://www.youtube.com/embed/qUaPl23EN5o" title="JULIETTE - SHOW COMPLETO (ROCK IN RIO 2022 // ARENA ITAÚ)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <p>Isso comprovou seu talento musical porque ela foi a artista com menos tempo de carreira a subir no palco do rock In Rio</p> 
+    <h4>Isso comprovou seu talento musical porque ela foi a artista com menos tempo de carreira a subir no palco do rock In Rio</h4>
     </body>
 </html>
