--- a/index.html
+++ b/index.html
@@ -43,11 +43,18 @@
 		<space>
 		</space>
 			<li><a href="https://youtu.be/Rqp9zpoRe6Q">Doce</a></li>
+	<br>	
+	<br>
+	<h2>``Juliette´´ é o extended play de estreia autointitulado da cantora brasileira Juliette, lançado em 2 de setembro de 2021, através da Rodamoinho Records e Virgin Music Brasil.</h2>
+			
+
 	<br>
 	<br>				
 	    <a href="https://www.youtube.com/c/Juliette/videos"> Clique aqui para ir no canal da Juliette e avaliar você mesmo o EP dela.</a>
 	<br>
 	<br>
+
+
 	<h3>Dia 11/09/22 a Juliette cantou na arena ítau no Rock In Rio</h3>
 	<h4>Isso comprovou seu talento musical porque ela foi a artista com menos tempo de carreira a subir no palco do rock In Rio</h4>
 	<iframe width="1000" height="500" src="https://www.youtube.com/embed/qUaPl23EN5o" title="JULIETTE - SHOW COMPLETO (ROCK IN RIO 2022 // ARENA ITAÚ)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
