--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 				background: rgb(162, 214, 162);
 				color: black;
 			}
+			h2{
+				text-align: start;
+				background-color: darkolivegreen;
+				color: black ;
+			}
 		</style>
 	</head>
 	<body>
@@ -45,12 +50,13 @@
 			<li><a href="https://youtu.be/Rqp9zpoRe6Q">Doce</a></li>
 	<br>	
 	<br>
-	<h2>``Juliette´´ é o extended play de estreia autointitulado da cantora brasileira Juliette, lançado em 2 de setembro de 2021, através da Rodamoinho Records e Virgin Music Brasil.</h2>
+	<h2>``Juliette´´</h2>
+	<h3>``Juliette´´ é o extended play de estreia autointitulado da cantora brasileira Juliette, lançado em 2 de setembro de 2021, através da Rodamoinho Records e Virgin Music Brasil.</h3>
 	<br>
 	<br>
 
-	<h3>Dia 11/09/22 a Juliette cantou na arena ítau no Rock In Rio.</h3>
-	<h4>Isso comprovou seu talento musical porque ela foi a artista com menos tempo de carreira a subir no palco do rock In Rio.</h4>
+	<h4>Dia 11/09/22 a Juliette cantou na arena ítau no Rock In Rio.</h4>
+	<h5>Isso comprovou seu talento musical porque ela foi a artista com menos tempo de carreira a subir no palco do rock In Rio.</h5>
 	<iframe width="1500" height="500" src="https://www.youtube.com/embed/qUaPl23EN5o" title="JULIETTE - SHOW COMPLETO (ROCK IN RIO 2022 // ARENA ITAÚ)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </body>
 </html>
