--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 				color: black;
 			}
 			h2{
-				text-align: start;
+				text-align: center;
 				background-color: darkolivegreen;
-				color: black ;
+				color: white ;
 			}
 		</style>
 	</head>
@@ -51,12 +51,12 @@
 	<br>	
 	<br>
 	<h2>``Juliette´´</h2>
-	<h3>``Juliette´´ é o extended play de estreia autointitulado da cantora brasileira Juliette, lançado em 2 de setembro de 2021, através da Rodamoinho Records e Virgin Music Brasil.</h3>
+	<p>``Juliette´´ é o extended play de estreia autointitulado da cantora brasileira Juliette, lançado em 2 de setembro de 2021, através da Rodamoinho Records e Virgin Music Brasil.</p>
 	<br>
 	<br>
 
-	<h4>Dia 11/09/22 a Juliette cantou na arena ítau no Rock In Rio.</h4>
-	<h5>Isso comprovou seu talento musical porque ela foi a artista com menos tempo de carreira a subir no palco do rock In Rio.</h5>
+	<p>Dia 11/09/22 a Juliette cantou na arena ítau no Rock In Rio.</p>
+	<p>Isso comprovou seu talento musical porque ela foi a artista com menos tempo de carreira a subir no palco do rock In Rio.</p>
 	<iframe width="1400" height="500" src="https://www.youtube.com/embed/qUaPl23EN5o" title="JULIETTE - SHOW COMPLETO (ROCK IN RIO 2022 // ARENA ITAÚ)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </body>
 </html>
