--- a/index.html
+++ b/index.html
@@ -12,16 +12,13 @@
 				text-align: center;
 				background: darkolivegreen;
 				color: white;
+				font-size: large;
 			}
 			p{
 				text-align: center;
 				background: rgb(162, 214, 162);
 				color: black;
-			}
-			h2{
-				text-align: center;
-				background-color: darkolivegreen;
-				color: white ;
+				font-size: medium;
 			}
 		</style>
 	</head>
@@ -50,11 +47,13 @@
 			<li><a href="https://youtu.be/Rqp9zpoRe6Q">Doce</a></li>
 	<br>	
 	<br>
-	<h2>``Juliette´´</h2>
+	<h1>``Juliette´´</h1>
+	<br>
 	<p>``Juliette´´ é o extended play de estreia autointitulado da cantora brasileira Juliette, lançado em 2 de setembro de 2021, através da Rodamoinho Records e Virgin Music Brasil.</p>
 	<br>
 	<br>
-
+	<h1>Rock In Rio</h1>
+	<br>
 	<p>Dia 11/09/22 a Juliette cantou na arena ítau no Rock In Rio.</p>
 	<p>Isso comprovou seu talento musical porque ela foi a artista com menos tempo de carreira a subir no palco do rock In Rio.</p>
 	<iframe width="1300" height="500" src="https://www.youtube.com/embed/qUaPl23EN5o" title="JULIETTE - SHOW COMPLETO (ROCK IN RIO 2022 // ARENA ITAÚ)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
