--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	<br>
 	<h1>``Juliette´´</h1>
 	<br>
-	<p>``Juliette´´ é o extended play de estreia autointitulado da cantora brasileira Juliette, lançado em 2 de setembro de 2021, através da Rodamoinho Records e Virgin Music Brasil.</p>
+	<p><a href="https://www.youtube.com/watch?v=vqBKm51Sx1o&list=PLzERc2H534byUhi4mVTVCa97i6QjpYEWP">``Juliette´´</a>é o extended play de estreia autointitulado da cantora brasileira Juliette, lançado em 2 de setembro de 2021, através da Rodamoinho Records e Virgin Music Brasil.</p>
 	<br>
 	<br>
 	<h1>Rock In Rio</h1>
