--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 				color: black;
 				font-size: medium;
 			}
+			h3{
+				text-align: start;
+				color: black;
+				font-size: medium;
+			}
 		</style>
 	</head>
 	<body>
@@ -47,15 +52,14 @@
 			<li><a href="https://youtu.be/Rqp9zpoRe6Q">Doce</a></li>
 	<br>	
 	<br>
-	<h1>``Juliette´´</h1>
+	<h1>''Juliette''</h1>
 	<br>
-	<p><a href="https://www.youtube.com/watch?v=vqBKm51Sx1o&list=PLzERc2H534byUhi4mVTVCa97i6QjpYEWP">``Juliette´´</a>é o extended play de estreia autointitulado da cantora brasileira Juliette, lançado em 2 de setembro de 2021, através da Rodamoinho Records e Virgin Music Brasil.</p>
+	<h3><a href="https://www.youtube.com/watch?v=vqBKm51Sx1o&list=PLzERc2H534byUhi4mVTVCa97i6QjpYEWP">''Juliette''</a>é o extended play de estreia autointitulado da cantora brasileira Juliette, lançado em 2 de setembro de 2021, através da Rodamoinho Records e Virgin Music Brasil.</h3>
 	<br>
 	<br>
 	<h1>Rock In Rio</h1>
 	<br>
-	<p>Dia 11/09/22 a Juliette cantou na arena ítau no Rock In Rio.</p>
-	<p>Isso comprovou seu talento musical porque ela foi a artista com menos tempo de carreira a subir no palco do rock In Rio.</p>
+	<h3>Dia 11/09/22 a Juliette cantou na arena ítau no Rock In Rio.Isso comprovou seu talento musical porque ela foi a artista com menos tempo de carreira a subir no palco do rock In Rio.</h3>
 	<iframe width="1300" height="500" src="https://www.youtube.com/embed/qUaPl23EN5o" title="JULIETTE - SHOW COMPLETO (ROCK IN RIO 2022 // ARENA ITAÚ)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </body>
 </html>
