--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				text-align: center;
 				background: darkolivegreen;
 				color: white;
-				font-size: large;
+				font-size: larger;
 			}
 			p{
 				text-align: center;
@@ -59,7 +59,7 @@
 	<br>
 	<h1>Rock In Rio</h1>
 	<br>
-	<h3>Dia 11/09/22 a Juliette cantou na arena ítau no Rock In Rio.Isso comprovou seu talento musical porque ela foi a artista com menos tempo de carreira a subir no palco do rock In Rio.</h3>
+	<h3>Em 11 de agosto, a lista de faixas foi divulgada.Em 27 do mesmo mês, Juliette publicou um vídeo em suas redes sociais no qual mostra algumas cenas dos bastidores das gravações das seis canções.Em 29 de agosto, foi revelada a data de lançamento do material e o pre-save do EP.Na véspera do lançamento, o EP já havia batido recorde de pre-save nacional no Spotify, com 222 mil inscrições. Somando com todas as plataformas, as inscrições contabilizava 600 mil inscritos.Juliette foi lançado às 21h de 2 de setembro de 2021 através da Rodamoinho Records, para download digital e streaming.</h3>
 	<iframe width="1300" height="500" src="https://www.youtube.com/embed/qUaPl23EN5o" title="JULIETTE - SHOW COMPLETO (ROCK IN RIO 2022 // ARENA ITAÚ)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </body>
 </html>
