--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
 	<br>
 	<h1>''Juliette''</h1>
 	<br>
-	<h3><a href="https://www.youtube.com/watch?v=vqBKm51Sx1o&list=PLzERc2H534byUhi4mVTVCa97i6QjpYEWP">''Juliette''</a>é o extended play de estreia autointitulado da cantora brasileira Juliette, lançado em 2 de setembro de 2021, através da Rodamoinho Records e Virgin Music Brasil.</h3>
+	<h3>Em 11 de agosto, a lista de faixas foi divulgada.Em 27 do mesmo mês, Juliette publicou um vídeo em suas redes sociais no qual mostra algumas cenas dos bastidores das gravações das seis canções.Em 29 de agosto, foi revelada a data de lançamento do material e o pre-save do EP.Na véspera do lançamento, o EP já havia batido recorde de pre-save nacional no Spotify, com 222 mil inscrições. Somando com todas as plataformas, as inscrições contabilizava 600 mil inscritos.Juliette foi lançado às 21h de 2 de setembro de 2021 através da Rodamoinho Records, para download digital e streaming.</h3>
 	<br>
 	<br>
 	<h1>Rock In Rio</h1>
 	<br>
-	<h3>Em 11 de agosto, a lista de faixas foi divulgada.Em 27 do mesmo mês, Juliette publicou um vídeo em suas redes sociais no qual mostra algumas cenas dos bastidores das gravações das seis canções.Em 29 de agosto, foi revelada a data de lançamento do material e o pre-save do EP.Na véspera do lançamento, o EP já havia batido recorde de pre-save nacional no Spotify, com 222 mil inscrições. Somando com todas as plataformas, as inscrições contabilizava 600 mil inscritos.Juliette foi lançado às 21h de 2 de setembro de 2021 através da Rodamoinho Records, para download digital e streaming.</h3>
+	<h3>No dia onze de Setembro (09/11) Juliette cantou ao vivo no Rcok In Rio na Arena Itaú.Ser a cantora com menos tempo de carreira a subir no palco no Rock In Rio é apenas umas das provas que mostram como a Juliette é extremamente talentosa e esta peste a revolucionar a música brasileira.</h3>
 	<iframe width="1300" height="500" src="https://www.youtube.com/embed/qUaPl23EN5o" title="JULIETTE - SHOW COMPLETO (ROCK IN RIO 2022 // ARENA ITAÚ)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </body>
 </html>
